# bob_llama_cpp

./: CMakeLists.txt  README.md  package.xml  requirements.txt
bob_llama_cpp/: llm.py  lnode.py  prompt_tools.py  setup.cfg  terminal.py  tools_functions.py  tools_minimal_example.py
config/: initial_messages.json  llm.yaml
launch/: llm.launch.py
